# claude-grc-agent-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude/hooks/: grc-audit.sh
.claude/skills/: oscal-ssp-convert.md
data/: ccpa.json  cmmc-2.0-practices.json  csa-ccm.json  dfars-252.204-7012.json  eu-ai-act.json  fedramp-baselines.json  fisma.json  framework-mappings.json  gdpr.json  iso-27001.json  iso-42001.json  nist-800-171-r2.json  nist-800-53-r5.json  nist-ai-rmf.json  nist-privacy-framework.json  oecd-ai-principles.json  soc2.json  white-house-eo-14110.json
examples/: sample-ai-system-card.md  sample-ai-system-federal.md  sample-model-card.md  sample-oscal-ssp.json  sample-policy.md  sample-prompts.md  sample-ssp-cmmc.md  sample-ssp.md
python/: pyproject.toml
python/grc_agent/: __main__.py  agent.py  grc_agent.py  mapping_convert.py  oscal_convert.py  repl.py
python/grc_agent/data/: data_loader.py  framework_data.py
python/grc_agent/mappings/: framework_mapper.py
python/grc_agent/mcp/: grc_server.py  grc_tools.py
python/grc_agent/schemas/: grc_schema.py  oscal_mapping_schema.py  oscal_ssp_schema.py
python/grc_agent/subagents/: __init__.py
python/grc_agent/tools/: fs_tools.py
scripts/: count-controls.sh  search-evidence.sh  validate-poam.sh
src/: agent.ts  grc-agent.ts  mapping-convert.ts  oscal-convert.ts  repl.ts
src/data/: data-loader.ts  framework-data.ts
src/mappings/: framework-mapper.ts
src/mcp/: grc-server.ts  grc-tools.ts
src/schemas/: grc-schema.ts  (+2 more)
(+2 files in other folders)
